--- a/src/app/components/pages/account/login/login.component.html
+++ b/src/app/components/pages/account/login/login.component.html
@@ -28,14 +28,14 @@
                 Sign in
             </button>
 
-            <button type="click" (click)="loginWithGoogle()"
+            <button *ngIf="allowGoogleAccount" type="click" (click)="loginWithGoogle()"
             class="flex items-center justify-center w-full 
             focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-5 py-2.5
             text-center ">
                 Sign in with Google
             </button>
 
-            <p class="text-sm font-light">
+            <p *ngIf="allowUserCreation" class="text-sm font-light">
                 Don't have an account yet? 
                 <a [routerLink]="['/signup']" class="cursor-pointer">
                     Signup
