--- a/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,34 +1,27 @@
 <div class="flex flex-col">
 
+    <!-- header -->
     <div>
         <div class="text-right">
-          <button (click)="logout()" class="py-2 px-4 rounded cursor-pointer">Logout</button>
+            <button (click)="logout()" class="py-2 px-4 rounded cursor-pointer">Logout</button>
         </div>
         <h4 class="font-bold mb-4 txt-accent">Admin dashboard</h4>
     </div>
 
-    <div>
-        <h3 class="text-xl font-bold mt-4 mb-4 txt-accent">Settings</h3>
-
-        <!-- settings -->
-
-        <div class="mb-4 text-left">
-            <h5 class="font-bold mt-4 mb-2 txt-dark-blue">Allow users creation</h5>
-            <mat-slide-toggle class="" [color]="color" [checked]="allowUserCreation" (change)="onToggleAllowUserCreation($event)">
-                Check if you want to allow users to create accounts.
-            </mat-slide-toggle>
+    <div class="col-12 flex">
+        <!-- categories list -->
+        <div class="col-2 pt-3 h-full rounded-md block bg-accent-light">
+            <ul>
+                <li><a routerLink="/admin-dashboard/admin-settings">Settings</a></li>
+                <li><a routerLink="/admin-dashboard/admin-users">Users</a></li>
+                <li><a routerLink="/admin-dashboard/admin-teams">Teams</a></li>
+            </ul>
         </div>
 
-        <div class="mb-4 text-left">
-            <h5 class="font-bold mt-4 mb-2 txt-dark-blue">Allow login and signup with Google account</h5>
-            <mat-slide-toggle class="" [color]="color" [checked]="allowGoogleAccount" (change)="onToggleAllowGoogleAccount($event)">
-                Check if you want to allow users to create accounts and login with Google account.
-            </mat-slide-toggle>
-        </div>
-
-
+        <!-- content area -->
+        <div class="col-10 block">
+            <router-outlet></router-outlet>
+        </div>        
     </div>
-    
-
 
 </div>
